Corrigir compatibilidade com Java 11 e bugs nos testes
- Remover pattern matching (Java 16+) em ArquivoMotor.java
- Converter Stream.toList() para Stream.collect(Collectors.toList())
- Converter record para class em RelatorioServico e testes
- Adicionar import de Collectors em Main.java e ArquivoMotor.java
- Corrigir lógica de estaAtrasado() para considerar empréstimos devolvidos
- Corrigir multasPendentesPorUsuario() para filtrar apenas empréstimos abertos
- Converter record em classes normais nos testes para Java 11